# nba3k

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RESEARCH-NBA2K.md  RESEARCH.md  todo-plan.md
crates/nba3k-cli/: Cargo.toml
crates/nba3k-cli/src/: cli.rs  commands.rs  config.rs  from_today.rs  main.rs  repl.rs  state.rs  tui.rs
crates/nba3k-cli/src/tui/: mod.rs  widgets.rs
crates/nba3k-cli/src/tui/screens/: calendar.rs  draft.rs  finance.rs  home.rs  inbox.rs  launch.rs  legacy.rs  mod.rs  new_game.rs  roster.rs  rotation.rs  saves.rs  settings.rs  stub.rs  trades.rs
crates/nba3k-cli/tests/: all_star_smoke.rs  awards_race_smoke.rs  compare_smoke.rs  hof_smoke.rs  integration_season1.rs  m22_trade_builder_smoke.rs  news_smoke.rs  offers_smoke.rs  recap_smoke.rs  records_smoke.rs  rumors_smoke.rs  saves_export_smoke.rs  saves_smoke.rs  season_advance_calendar.rs  standings_history.rs
crates/nba3k-core/: Cargo.toml
crates/nba3k-core/src/: coach.rs  contract.rs  draft.rs  gm.rs  i18n.rs  i18n_en.rs  i18n_zh.rs  ids.rs  league_year.rs  lib.rs  money.rs  player.rs  rotation.rs  season.rs  sim_io.rs  snapshot.rs  team.rs  trade.rs
crates/nba3k-core/tests/: coach.rs  smoke.rs
crates/nba3k-models/: Cargo.toml
crates/nba3k-models/src/: asset_fit.rs  contract_extension.rs  contract_gen.rs  contract_value.rs  lib.rs  player_value.rs  progression.rs  retirement.rs  star_protection.rs  stat_projection.rs  team_chemistry.rs  team_context.rs  trade_acceptance.rs  training.rs  weights.rs
crates/nba3k-models/tests/: asset_fit_basic.rs  common.rs  context_classify.rs  contract_extension.rs  contract_gen.rs  progression_growth.rs  retirement.rs  star_protection_basic.rs  star_protection_signals.rs  stat_projection_realism.rs  trade_acceptance_basic.rs  training_focus.rs  value_player.rs
crates/nba3k-scrape/: Cargo.toml  README.md
crates/nba3k-scrape/py/: league_dash_advanced.py
crates/nba3k-scrape/src/: assertions.rs  cache.rs  ids.rs  lib.rs  main.rs  overrides.rs  politeness.rs  ratings.rs  seed.rs  teams.rs
crates/nba3k-scrape/src/sources/: bbref.rs  espn.rs  hoophype.rs  mock_draft.rs  mod.rs  nba_api.rs  spotrac.rs
crates/nba3k-scrape/tests/: espn_parse.rs  spotrac_parser.rs
crates/nba3k-scrape/tests/fixtures/espn/: news_trades.json  player_stats_2026.json  roster_lal.json  scoreboard_20260128.json  standings_2026.json  teams.json
crates/nba3k-season/: Cargo.toml
crates/nba3k-season/src/: awards.rs  career.rs  lib.rs  phases.rs  playoffs.rs  progression_pass.rs  schedule.rs  standings.rs
crates/nba3k-season/tests/: awards_tests.rs  career_stats.rs  playoffs_tests.rs  schedule_tests.rs
crates/nba3k-sim/: Cargo.toml
crates/nba3k-sim/src/: lib.rs  params.rs
crates/nba3k-sim/src/engine/: mod.rs  statistical.rs  team_quality.rs
crates/nba3k-sim/tests/: fg_calibration.rs  injuries.rs
crates/nba3k-store/: Cargo.toml
crates/nba3k-store/migrations/: V001__initial.sql  V002__schedule.sql  V003__player_dev.sql  V004__series.sql  V005__player_role_morale.sql  V006__free_agents.sql  V007__player_retired.sql  V008__news.sql  V009__player_scouted.sql  V010__all_star.sql  V011__cup.sql  V012__notes.sql  V013__mandate.sql  V014__rotation.sql  V015__settings.sql  V016__season_calendar.sql  V017__player_season_stats.sql  V018__pick_protections_resolved.sql
crates/nba3k-store/src/: lib.rs  store.rs
crates/nba3k-store/tests/: cup.rs  draft_picks.rs  fa_pool.rs  mandate.rs  notes.rs  player_season_stats.rs  rotation.rs  scouting.rs  season_calendar.rs  settings.rs
crates/nba3k-trade/: Cargo.toml
crates/nba3k-trade/src/: cba.rs  context.rs  evaluate.rs  lib.rs  negotiate.rs  personality.rs  snapshot.rs  valuation.rs
crates/nba3k-trade/tests/: cba_apron2.rs  cba_common.rs  cba_kicker.rs  cba_matching.rs  cba_misc.rs  context_classify.rs  evaluate_regression.rs  negotiate_personality.rs  negotiate_state_machine.rs  personality_loader.rs  three_team_trades.rs
data/: archetype_profiles.toml  free_agents_2025_26.toml  personalities.toml  pick_swaps_overrides.toml  rating_overrides.toml  realism_weights.toml  sim_params.toml  star_roster.toml
docs/: AGENTS.md  ARCHITECTURE.md  PROGRESS.md  README.md  RUNNING.md  VERIFICATION.md
phases/: BUGFIX-offseason-roster-cap.md  BUGFIX-season-start-user-cut.md  M1-skeleton.md  M10-stretch.md  M11-contracts.md  M12-economy.md  M13-liveness.md  M14-meta.md  M15-events-history.md  M16-cup-rumors.md  M17-gm-tools.md  M18-narrative.md  M19-tui.md  M19.2-sim-rewrite-research.md  M2-seed-sim.md  M20-tui-shell.md  M21-roster-rotation.md  M22-trade-draft-finance.md  M3-trade.md  M31-calendar-and-espn.md  M32-from-today-importer.md  M33-tui-and-polish.md  M34-from-today-default.md  M35-snapshot-semantics.md  M36-draft-picks.md  M4-realism.md  M5-realism-v2.md  PHASES.md  POST-M20-HANDOFF.md  QA-CHARTER.md  QA-FIX-LOG.md  QA-REPORT-2k.md  QA-REPORT-bugs.md  QA-REPORT-flow.md  QA-REPORT-ux.md  RESUME.md
tests/scripts/: season1.txt
