[package]
name = "nba3k-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nba3k"
path = "src/main.rs"

[dependencies]
nba3k-core = { workspace = true }
nba3k-store = { workspace = true }
nba3k-sim = { workspace = true }
nba3k-trade = { workspace = true }
nba3k-models = { workspace = true }
nba3k-season = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
shlex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
indexmap = { workspace = true }
