[package]
name = "nba3k-scrape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nba3k-scrape"
path = "src/main.rs"

[dependencies]
nba3k-core = { workspace = true }
nba3k-models = { workspace = true }
nba3k-store = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
regex = "1"
