[package]
name = "nba3k-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nba3k-core = { workspace = true }
nba3k-models = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }
